--- a/hw08_HTML_CSS/grid_version/index.html
+++ b/hw08_HTML_CSS/grid_version/index.html
@@ -1,88 +1,84 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 100px 1fr;
-            grid-template-areas:
-                "header header"
-                "sidebar content";
-            min-height: 100vh;
-        }
-
-        .header {
-            grid-area: header;
-            background-color: #333;
-            color: #fff;
-            padding: 0;
-            position: fixed;
-            width: 100%;
-        }
-
-        .sidebar {
-            grid-area: sidebar;
-            background-color: #f2f2f2;
-            padding: 20px;
-            position: fixed;
-            height: calc(100vh - 100px);
-            overflow-y: auto;
-            top: 100px;
-            width: 200px;
-        }
-
-        .content {
-            grid-area: content;
-            padding: 20px;
-            margin-left: 200px;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                grid-template-columns: 1fr;
-                grid-template-rows: 100px auto;
-                grid-template-areas:
-                    "header"
-                    "content";
-            }
-
-            .sidebar {
-                position: static;
-                height: auto;
-                width: 100%;
-                margin-left: 0;
-            }
-
-            .content {
-                margin-left: 0;
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Workit</title>
+    <meta name="theme-color" content="#FF00FF">
 </head>
-<body>
+
+<body class="page">
     <div class="container">
-        <div class="header">
-            <h1>Заголовок</h1>
-        </div>
         <div class="sidebar">
-            <h2>Боковое меню</h2>
-            <ul>
-                <li>Пункт 1</li>
-                <li>Пункт 2</li>
-                <li>Пункт 3</li>
+            <h2 class="name" data-end=".">Workit</h2>
+            <ul class="list list1">
+                <li><i class="material-icons icon">dashboard</i>Dashboard</li>
+                <li><i class="material-icons icon">business</i>Available units</li>
+                <li><i class="material-icons icon">security</i>Invoices</li>
+                <li><i class="material-icons icon">access_time</i>Projects</li>
+                <li><i class="material-icons icon">share</i>Social media</li>
+                <li><i class="material-icons icon">border_all</i>Integrations</li>
+                <li id="lastEl"><i class="material-icons icon">bookmark_border</i>Documentation</li>
+            </ul>
+            <ul class="list list2">
+                <li><i class="material-icons icon">settings</i>Settings</li>
+                <li><i class="material-icons icon">help_outline</i>Help center</li>
             </ul>
         </div>
-        <div class="content">
-            <h2>Содержимое</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur ligula vel arcu tristique, a mattis orci sollicitudin. Suspendisse scelerisque ultricies felis in rutrum. Sed pretium felis eu ex efficitur dignissim. Sed suscipit tincidunt elit ac dignissim. Nulla eget pharetra urna. In ac tellus at odio iaculis tristique id eget arcu. Etiam pulvinar luctus tellus at posuere. Donec accumsan, nisi at fringilla vestibulum, ex risus pharetra lacus, in iaculis lectus mi at lectus. Curabitur efficitur purus at est pellentesque, et posuere nisi faucibus. Duis non orci varius, finibus risus sit amet, mattis nunc.</p>
+        <div class="main">
+            <div class="header">
+                <div class="part1">
+                    <div class="team" >
+                        <h2>Team</h2>
+                        <button id="dropdown"><i class="material-icons">arrow_drop_down</i></button>
+                    </div>
+                    <div class="buttons">
+                        <button id="newuser">New user +</button>
+                        <button id="notice"><i class="material-icons">notifications_none</i></button>
+                        <button id="search"><i class="material-icons">search</i></button>
+                        <button id="avatar"><i class="material-icons">person_outline</i></button>
+                    </div>
+                </div>
+                <div class="part2">
+                    <button class="filter">Filter users<i class="material-icons">filter_list</i></button>
+                    <div class="search-input">
+                        <input placeholder="Try 'Miami beachhouse'">
+                        <button><i class="material-icons">search</i></button>
+                    </div>
+                    <div class="settings">
+                        <select class="dropdown">
+                            <option>Sort by date</option>
+                        </select>
+                        <button id="search"><i class="material-icons">more_vert</i></button>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="content">
+                <div class="card">
+                    <img src="per2.jpg" alt="Card image" class="img-pers">
+                    <div class="card-body">
+                        <h5 class="card-title">Mark Zuckerberg</h5>
+                        <h6 class="card-text">Product manager</h6>
+                        <div class="stats">
+
+                        </div>
+                        <button id="view">View profile</button>
+                    </div>
+                </div>
+
+                
+
+
+            </div>
+
         </div>
     </div>
+
+
 </body>
+
 </html>
